Changed dates format in view_event and edit_event pages: dates are now displayed in a more user friendly, easily readable format; also the chart labels representing dates have been changed. Fix: fixed layout issue with long titles

--- a/events/static/events/main.css
+++ b/events/static/events/main.css
@@ -256,17 +256,12 @@ body {
     content: "";
     position: absolute;
     width: 150%;
-    height: 120%;
-    top: -10%;
+    height: 100%;
     left: -25%;
     z-index: -1;
     background-color: var(--title-bg-color);
     transition: .5s ease-in;
 }
-
-/* .best-date {
-    color: var(--selected-border);
-} */
 
 .card-footer {
     color: var(--title-bg-color);
